Before After in Aja Dynasty

--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -130,6 +130,17 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="new-old mt-12 grid grid-cols-1 justify-between gap-16 text-center md:grid-cols-2">
+                    <div class="md:col-span-1">
+                        <h3 class="mb-4 text-2xl text-gray lg:text-3xl">Before</h3>
+                        <img src="../assets/images/aja-before.png" alt="" />
+                    </div>
+                    <div class="md:col-span-1">
+                        <h3 class="mb-4 text-2xl lg:text-3xl">After</h3>
+                        <img src="../assets/images/aja-after.png" alt="" />
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -208,25 +219,25 @@
                 </div>
                 <h3 class="mb-8 text-2xl lg:text-3xl">Key Findings</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-crown-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">User Interest in Cultural Heritage</h3>
                         <p class="text-gray">Users showed a strong interest in the cultural stories behind Aja Dynasty's products, indicating a desire for authenticity and connection with Nepalese heritage.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-nav-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Navigation Issues</h3>
                         <p class="text-gray">The existing website had navigation problems, with users finding it confusing and difficult to navigate. This highlighted the need for improved site structure and intuitive navigation.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-mob-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Mobile Optimization Lacking</h3>
                         <p class="text-gray">The current website lacked mobile optimization, leading to a poor user experience for mobile users. This underscored the importance of ensuring a seamless experience across all devices.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-content-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Desire for Engaging Content</h3>
                         <p class="text-gray">Users expressed a desire for engaging content that goes beyond product listings, indicating an opportunity to incorporate storytelling and immersive experiences into the website design.</p>
@@ -235,7 +246,7 @@
 
                 <h3 class="mb-8 text-2xl lg:text-3xl">Personas</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/pp-emma.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -249,7 +260,7 @@
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> Emma needs a platform with a curated selection of authentic cultural products, making her blogging journey smoother.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/pp-john.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -360,25 +371,25 @@
                 <h1 class="mb-4 text-4xl lg:text-6xl">Key Learnings</h1>
                 <p class="mb-12 text-gray">My journey through this project provided some valuable insights.</p>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-user-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">User-Centric Design</h3>
                         <p class="text-gray">Understanding user needs and preferences is crucial for creating an engaging and effective website.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-balance-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Balancing Tradition and Modernity</h3>
                         <p class="text-gray">Successfully blending traditional elements with modern design can create a unique and appealing brand identity.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-chat-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Effective Storytelling</h3>
                         <p class="text-gray">Engaging content that tells a story can significantly enhance user engagement and brand loyalty.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-mob-golden.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Importance of Mobile Optimization</h3>
                         <p class="text-gray">Ensuring a seamless mobile experience is essential in today’s digital landscape.</p>
