--- a/works/aja-dynasty.html
+++ b/works/aja-dynasty.html
@@ -418,11 +418,11 @@
                         <div class="text-right">
                             <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
                                 <div>
-                                    <a href="#" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
-                                    <a href="#" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Insellerate</h3></a>
-                                    <a href="#" class="uppercase hover:text-primary"><p>Mobile App Design • 2018</p></a>
+                                    <a href="insellerate" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
+                                    <a href="insellerate" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Insellerate</h3></a>
+                                    <a href="insellerate" class="uppercase hover:text-primary"><p>Mobile App Design • 2019</p></a>
                                 </div>
-                                <a href="#"><img src="../assets/images/insellerate.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="insellerate"><img src="../assets/images/insellerate.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
                         </div>
                     </div>
