--- a/works/amooma.html
+++ b/works/amooma.html
@@ -198,25 +198,25 @@
                 </div>
                 <h3 class="mb-8 text-2xl lg:text-3xl">Key Findings</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-nav.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Navigation</h3>
                         <p class="text-gray">Users found the old website's navigation unintuitive and cluttered. Simplifying the navigation structure was necessary to enhance user experience.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-book.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Booking Process</h3>
                         <p class="text-gray">The existing booking process was cumbersome and led to drop-offs. Implementing a streamlined and user-friendly booking system was essential.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-mob.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Mobile Optimization</h3>
                         <p class="text-gray">A significant portion of users accessed the site via mobile devices. Ensuring the website was fully responsive and optimized for mobile was critical.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-content.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Content Clarity</h3>
                         <p class="text-gray">Users wanted clear, concise information about services, pricing, and spa policies. Improved content organization and presentation were required.</p>
@@ -225,7 +225,7 @@
 
                 <h3 class="mb-8 text-2xl lg:text-3xl">Personas</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/persona-01.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -239,7 +239,7 @@
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> An easy-to-use booking system, clear service descriptions, and mobile-friendly design.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/persona-02.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -334,25 +334,25 @@
                 <h1 class="mb-4 text-4xl lg:text-6xl">Key Learnings</h1>
                 <p class="mb-12 text-gray">My journey through this project provided several key insights.</p>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-check.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Understanding User Needs</h3>
                         <p class="text-gray">Recognizing the importance of understanding the needs and preferences of the spa's target audience to tailor the website's design and content accordingly.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-ux.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Improved User Experience (UX)</h3>
                         <p class="text-gray">Emphasizing the enhancement of overall user experience by optimizing navigation, ensuring mobile responsiveness, and creating clear calls-to-action for effective user guidance.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-refresh.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Visual Refresh</h3>
                         <p class="text-gray">Updating visual elements such as color palette, typography, and imagery to align with the brand's image and appeal to the target audience, creating an inviting atmosphere.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-feedback.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Feedback and Iteration</h3>
                         <p class="text-gray">Acknowledging the significance of gathering feedback from users throughout the redesign process and using it to iterate and improve the website continuously, ensuring its effectiveness in meeting user needs and goals.</p>
@@ -381,11 +381,11 @@
                         <div class="text-right">
                             <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
                                 <div>
-                                    <a href="#" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
-                                    <a href="#" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Insellerate</h3></a>
-                                    <a href="#" class="uppercase hover:text-primary"><p>Mobile App Design • 2018</p></a>
+                                    <a href="hydro-steam-nw" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
+                                    <a href="hydro-steam-nw" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Hydro Steam Northwest</h3></a>
+                                    <a href="hydro-steam-nw" class="uppercase hover:text-primary"><p>UI/UX/WEB DESIGN • 2018</p></a>
                                 </div>
-                                <a href="#"><img src="../assets/images/insellerate.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="hydro-steam-nw"><img src="../assets/images/hydrosteam-web.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
                         </div>
                     </div>
