--- a/works/hydro-steam-nw.html
+++ b/works/hydro-steam-nw.html
@@ -200,25 +200,25 @@
                 </div>
                 <h3 class="mb-8 text-2xl lg:text-3xl">Key Findings</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-crown-blue.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Need for Differentiation</h3>
                         <p class="text-gray">Competitor websites varied widely in quality, highlighting an opportunity for Hydro Steam Northwest to stand out with a professional, visually appealing, and user-friendly site.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-info-blue.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">User Information Priorities</h3>
                         <p class="text-gray">Users highly valued clear and accessible information about services, pricing, and contact details, which were often difficult to find on competitors' sites.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-crown-blue.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Trust-Building Elements</h3>
                         <p class="text-gray">Including customer testimonials, certifications, and detailed service descriptions was crucial to build trust and credibility with potential clients.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-mobile-blue.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Mobile Accessibility</h3>
                         <p class="text-gray">A significant portion of users accessed competitor sites via mobile devices, emphasizing the need for a mobile-first design to ensure full responsiveness and a seamless user experience across all screen sizes.</p>
@@ -227,7 +227,7 @@
 
                 <h3 class="mb-8 text-2xl lg:text-3xl">Personas</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/sarah.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -241,7 +241,7 @@
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> Sarah needs a straightforward website for scheduling cleaning appointments with clear details on safety, pricing, and the cleaning process.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/david.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -345,25 +345,25 @@
                 <h1 class="mb-4 text-4xl lg:text-6xl">Key Learnings</h1>
                 <p class="mb-12 text-gray">My journey through this project provided some valuable insights.</p>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-eye-blue.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Industry Insight Matters</h3>
                         <p class="text-gray">Understanding the cleaning service sector helped tailor the website to Hydro Steam Northwest's needs, ensuring it stood out and addressed industry-specific challenges effectively.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-list-blue.png" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Keep it Clear and Simple</h3>
                         <p class="text-gray">Prioritizing clarity over complexity in design and content presentation improved usability. Users seek quick, relevant information; thus, a straightforward layout and concise content encouraged engagement.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-photo-blue.png" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Visuals Reinforce Brand Values</h3>
                         <p class="text-gray">Utilizing high-quality imagery and a clean design aesthetic visually conveyed Hydro Steam Northwest's commitment to cleanliness and professionalism, fostering trust among visitors.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-mobile-blue.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Accessible Across Devices</h3>
                         <p class="text-gray">Implementing responsive design principles ensured accessibility on various devices, reflecting the brand's commitment to inclusivity and accommodating users' preferences.</p>
