--- a/works/the-cliff-nepal.html
+++ b/works/the-cliff-nepal.html
@@ -199,25 +199,25 @@
                 </div>
                 <h3 class="mb-8 text-2xl lg:text-3xl">Key Findings</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-nav-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Navigation & Booking</h3>
                         <p class="text-gray">Users expressed frustration with the previous website's navigation, finding it difficult to locate information about activities, safety measures, and booking options. Simplifying navigation and streamlining the booking process emerged as crucial improvements to enhance user experience and encourage conversions.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-eye-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Visual Content Impact</h3>
                         <p class="text-gray">Feedback emphasized the importance of visual content in shaping perceptions of the adventure experiences offered by The Cliff Nepal. Users responded positively to high-quality images and videos showcasing the breathtaking scenery and adrenaline-pumping activities.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-mobile-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Mobile Usability Issues</h3>
                         <p class="text-gray">Mobile users encountered significant usability issues on the previous website, including slow loading times, unresponsive elements, and poor readability. With the increasing prevalence of mobile devices for browsing and booking travel experiences, addressing mobile usability emerged as a priority.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-safety-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Safety Communication</h3>
                         <p class="text-gray">Users expressed concerns about safety when considering adventure activities such as bungee jumping and zip-lining. Clear and comprehensive communication of safety measures, equipment standards, and operational procedures was deemed crucial for building trust and confidence among potential visitors.</p>
@@ -226,7 +226,7 @@
 
                 <h3 class="mb-8 text-2xl lg:text-3xl">Personas</h3>
                 <div class="mb-12 grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/emma.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -240,7 +240,7 @@
                         <p class="text-gray"><span class="font-medium uppercase tracking-wider text-primary">NEEDS:</span> Emma needs a user-friendly website with easy booking and clear activity details.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <div class="mb-4 flex items-center space-x-4">
                             <img src="../assets/images/john.png" alt="" class="mb-4 w-20 rounded-full md:w-28" />
                             <div>
@@ -342,25 +342,25 @@
                 <h1 class="mb-4 text-4xl lg:text-6xl">Key Learnings</h1>
                 <p class="mb-12 text-gray">My journey through this project provided some valuable insights.</p>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2">
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-user-green.png" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Importance of User-Centered Design</h3>
                         <p class="text-gray">Focusing on user needs and feedback improved usability and user satisfaction. Regular testing and user insights were crucial in shaping the design to meet real user needs.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-chat-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Effective Communication is Crucial</h3>
                         <p class="text-gray">Providing clear and accessible information, especially about safety and activities, built user trust. Users engaged more with a website that offered well-organized and concise information.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-mobile-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Mobile Optimization is Essential</h3>
                         <p class="text-gray">Ensuring the website worked well on mobile devices was crucial. A mobile-first design approach improved the experience for the many users accessing the site on their phones.</p>
                     </div>
 
-                    <div class="rounded-xl bg-zinc-800 p-5 md:p-8">
+                    <div class="rounded-xl bg-black p-5 md:p-8">
                         <img src="../assets/images/icon-eye-green.svg" alt="" class="mb-4 w-10" />
                         <h3 class="mb-2 text-2xl lg:text-3xl">Visual Content Drives Engagement</h3>
                         <p class="text-gray">High-quality images and videos significantly boosted user engagement. Investing in professional visuals helped attract and retain users, showcasing The Cliff Nepal's offerings effectively.</p>
@@ -379,21 +379,21 @@
                     <h1 class="mb-8 text-center text-4xl md:text-left lg:text-6xl">More to explore</h1>
                     <div class="grid grid-cols-1 justify-between gap-y-8 md:grid-cols-2">
                         <div class="flex items-center gap-x-5 lg:gap-x-8">
-                            <a href="amooma"><img src="../assets/images/amooma-web.jpg" alt="" class="h-32 rounded-md duration-300 ease-in-out hover:scale-110" /></a>
+                            <a href="insellerate"><img src="../assets/images/insellerate.png" alt="" class="h-32 rounded-md duration-300 ease-in-out hover:scale-110" /></a>
                             <div>
-                                <a href="amooma" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-3xl"></i> Previous </a>
-                                <a href="amooma" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Amooma</h3></a>
-                                <a href="amooma" class="uppercase hover:text-primary"><p>UI/UX/WEB DESIGN • 2020</p></a>
+                                <a href="insellerate" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary"><i class="las la-arrow-right mr-2 rotate-[135deg] text-xl md:text-3xl"></i> Previous </a>
+                                <a href="insellerate" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Insellerate</h3></a>
+                                <a href="insellerate" class="uppercase hover:text-primary"><p>Mobile App Design • 2019</p></a>
                             </div>
                         </div>
                         <div class="text-right">
                             <div class="flex items-center justify-end gap-x-5 lg:gap-x-8">
                                 <div>
-                                    <a href="#" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
-                                    <a href="#" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Insellerate</h3></a>
-                                    <a href="#" class="uppercase hover:text-primary"><p>Mobile App Design • 2018</p></a>
+                                    <a href="amooma" class="mb-2 inline-flex items-center rounded-full uppercase tracking-widest text-dark hover:text-primary">Next Up <i class="las la-arrow-right ml-2 -rotate-45 text-xl md:text-3xl"></i></a>
+                                    <a href="amooma" class="hover:text-primary"><h3 class="mb-1 text-2xl md:text-3xl">Amooma</h3></a>
+                                    <a href="amooma" class="uppercase hover:text-primary"><p>UI/UX/WEB DESIGN • 2020</p></a>
                                 </div>
-                                <a href="#"><img src="../assets/images/insellerate.png" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
+                                <a href="amooma"><img src="../assets/images/amooma-web.jpg" alt="" class="h-32 rounded-md bg-blue-100 duration-300 ease-in-out hover:scale-110" /></a>
                             </div>
                         </div>
                     </div>
