--- a/work.html
+++ b/work.html
@@ -106,18 +106,19 @@
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
                     </div>
-                    <!--Amooma-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-cyan-50">
+
+                    <!--Insellerate-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
                         <div class="overflow-hidden rounded-br-3xl">
                             <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
-                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2020</p>
-                                <h3 class="mb-4 text-3xl">Amooma</h3>
+                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p>
+                                <p class="uppercase">Mobile App DESIGN &bull; 2018</p>
+                                <h3 class="mb-4 text-3xl">Insellerate</h3>
                             </div>
-                            <img src="assets/images/amooma-web.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                            <img src="assets/images/insellerate.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
-                        <a href="works/amooma" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
-                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
+                        <a href="works/insellerate" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
                     </div>
@@ -138,6 +139,22 @@
                         </div>
                     </div>
 
+                    <!--Amooma-->
+                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-cyan-50">
+                        <div class="overflow-hidden rounded-br-3xl">
+                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
+                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Source Taggers</p>
+                                <p class="uppercase">UI/UX/WEB DESIGN &bull; 2020</p>
+                                <h3 class="mb-4 text-3xl">Amooma</h3>
+                            </div>
+                            <img src="assets/images/amooma-web.jpg" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
+                        </div>
+                        <a href="works/amooma" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
+                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow transition-all duration-300 ease-in-out">
+                            <img src="assets/images/view-project-white.svg" alt="" />
+                        </div>
+                    </div>
+
                     <!--Hydro Steam Northwest-->
                     <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-[#DCF0FA]">
                         <div class="overflow-hidden rounded-br-3xl">
@@ -149,22 +166,6 @@
                             <img src="assets/images/hydrosteam-web.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
                         </div>
                         <a href="works/hydro-steam-nw" target="" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
-                        <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
-                            <img src="assets/images/view-project-white.svg" alt="" />
-                        </div>
-                    </div>
-
-                    <!--Insellerate-->
-                    <div class="portfolio group relative rounded-3xl bg-zinc-800 pl-8 pt-6 transition duration-500 ease-in-out hover:bg-blue-100">
-                        <div class="overflow-hidden rounded-br-3xl">
-                            <div class="pr-4 text-right text-white group-hover:text-dark lg:pr-8">
-                                <p class="mb-3 inline-block w-auto rounded-full border border-white px-4 py-1 text-xs uppercase tracking-widest group-hover:border-dark">Agency: Webbed Studio</p>
-                                <p class="uppercase">Mobile App DESIGN &bull; 2018</p>
-                                <h3 class="mb-4 text-3xl">Insellerate</h3>
-                            </div>
-                            <img src="assets/images/insellerate.png" alt="" class="translate-x-3 transform rounded-br-3xl rounded-tl-lg duration-300 ease-in-out group-hover:translate-x-0" />
-                        </div>
-                        <a href="https://apps.apple.com/us/app/insellerate/id1517753766" target="_blank" class="absolute inset-0 z-10"><div class="sr-only">open case study</div></a>
                         <div class="view-project absolute -right-8 bottom-12 z-20 animate-spin-slow mix-blend-difference transition-all duration-300 ease-in-out">
                             <img src="assets/images/view-project-white.svg" alt="" />
                         </div>
